--- a/Pythonised/pyproject.toml
+++ b/Pythonised/pyproject.toml
@@ -7,9 +7,11 @@ authors = ["Martyn"]
 [tool.poetry.dependencies]
 python = "^3.9"
 gym = "^0.21.0"
-numpy = "^1.21.2"
+numpy = "1.19.3"
 colorpy = {git = "https://github.com/markkness/ColorPy.git"}
-#colorpy = {git = "https://github.com/martyn-smith/colorpy.git")
+tensorflow = "2.6.0"
+matplotlib = "3.4.3"
+pyglet = "1.5.0"
 
 [tool.poetry.dev-dependencies]
 
