--- a/Pythonised/pyproject.toml
+++ b/Pythonised/pyproject.toml
@@ -9,7 +9,8 @@ python = "^3.9"
 gym = "^0.21.0"
 numpy = "1.19.3"
 colorpy = {git = "https://github.com/markkness/ColorPy.git"}
-tensorflow = "2.6.0"
+tensorflow = "2.7.0"
+tensorflow-probability = "0.15.0"
 matplotlib = "3.4.3"
 pyglet = "1.5.0"
 
