--- a/Pythonised/pyproject.toml
+++ b/Pythonised/pyproject.toml
@@ -5,14 +5,13 @@ description = "Tennessee Eastman module for OpenAIgym"
 authors = ["Martyn"]
 
 [tool.poetry.dependencies]
-python = "^3.9"
+python = "3.9"
 gym = "^0.21.0"
 numpy = "1.19.3"
-colorpy = {git = "https://github.com/markkness/ColorPy.git"}
 tensorflow = "2.7.0"
-tensorflow-probability = "0.15.0"
 matplotlib = "3.4.3"
 pyglet = "1.5.0"
+tensorflow-probability = "^0.15.0"
 
 [tool.poetry.dev-dependencies]
 
