dual axis figures and fatigue counting

--- a/Pythonised/makefile
+++ b/Pythonised/makefile
@@ -1,6 +1,7 @@
+SHELL := /bin/bash
+
 report:
-	touch foo.png bar.md
-	rm *.png *.md
+	rm -f *.png *.md *.h5 errors*.txt
 	python3 teprob.py --fast --report 2>> errors_$$(date +"%Y-%m-%d").txt
 	pandoc -o report_$$(date +"%Y-%m-%d").pdf report_$$(date +"%Y-%m-%d").md
 	rm *.png *.md
