added load/save functionality and static blue team runs

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,9 @@ builds/
 reference/
 data/
 Pythonised/stategenerator/
+Pythonised/__pycache/
+Pythonised/actorcritic*
+Pythonised/checkpoint
 errors*.txt
 *.dat
 *.mod
