--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ python = ">=3.9,<3.11"
 gym = "^0.21.0"
 numpy = "1.22.3"
 tensorflow = "2.9.0"
-matplotlib = "3.4.3"
+matplotlib = "^3.5.0"
 pyglet = "1.5.0"
 colorpy = { git = "https://github.com/martyn-smith/colorpy.git", branch = "master"}
 
