--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,12 +6,13 @@ authors = ["Martyn"]
 
 [tool.poetry.dependencies]
 python = ">=3.9,<3.11"
-gym = "^0.21.0"
+gym = "0.22.0"
 numpy = "1.22.3"
 tensorflow = "2.9.0"
 matplotlib = "^3.5.0"
 pyglet = "1.5.0"
 colorpy = { git = "https://github.com/martyn-smith/colorpy.git", branch = "master"}
+pygame = "^2.4.0"
 
 [tool.poetry.dev-dependencies]
 
